# deepin-update-ui

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  lupdate.sh  translate_generation.sh
src/dcc-update-plugin/: CMakeLists.txt  updatemodule.cpp  updatemodule.h
src/dcc-update-plugin/misc/: org.deepin.dde.control-center.update.json
src/dcc-update-plugin/misc/permission-interfaces/: org.deepin.dcc-update-ui.json
src/dcc-update-plugin/module/: common.h  signalbridge.h  update.qrc  updatedatastructs.h  updateiteminfo.cpp  updateiteminfo.h  updateloghelper.cpp  updateloghelper.h  updatemodel.cpp  updatemodel.h  updatework.cpp  updatework.h
src/dcc-update-plugin/operation/: appupdateinfolist.cpp  common.h  dconfigwatcher.cpp  dconfigwatcher.h  mirrorinfolist.cpp  mirrorsourcemodel.cpp  mirrorsourcemodel.h  updatedatastructs.h  updatedbusproxy.cpp  updatedbusproxy.h  updatehistorymodel.cpp  updatehistorymodel.h  updateinteraction.cpp  updateinteraction.h  updateiteminfo.cpp  updateiteminfo.h  updatelistmodel.cpp  updatelistmodel.h  updateloghelper.cpp  updateloghelper.h  updatemodel.cpp  updatemodel.h  updatestatus.cpp  updatestatusdata.cpp  updatework.cpp  updatework.h  utils.h
src/dcc-update-plugin/operation/qrc/: update.qrc
src/dcc-update-plugin/qml/: CheckUpdate.qml  MirrorSourcePopup.qml  NoActive.qml  QuitTestingChannelDialog.qml  Update.qml  UpdateControl.qml  UpdateDisable.qml  UpdateHistoryDialog.qml  UpdateList.qml  UpdateLogDialog.qml  UpdateMain.qml  UpdateSelectDialog.qml  UpdateSetting.qml  update.dci  update.qml  updateMain.qml  update_maintenance.dci  update_no_update_history.dci  update_pause.dci  update_safe.dci  update_start.dci  update_stop.dci
src/dcc-update-plugin/translations/: update_ar.ts  update_az.ts  update_bn.ts  update_bo.ts  update_ca.ts  update_cs.ts  update_da.ts  update_de.ts  update_de_DE.ts  update_el.ts  update_en.ts  update_en_US.ts  update_es.ts  update_et.ts  update_fi.ts  update_fr.ts  update_gl_ES.ts  update_he.ts  update_hr.ts  update_hu.ts  update_it.ts  update_ja.ts  update_kab.ts  update_kk.ts  update_ko.ts  update_lo.ts  update_lt.ts  update_ms.ts  update_nb_NO.ts  update_ne.ts  update_nl.ts  update_pl.ts  update_pt.ts  update_pt_BR.ts  update_ro.ts  update_ru.ts  update_sl.ts  update_sq.ts  update_sr.ts  update_tr.ts  (+6 more)
src/dcc-update-plugin/window/: accessible.h  dccv20update.qrc  dconfigwatcher.cpp  dconfigwatcher.h  gsettingwatcher.cpp  gsettingwatcher.h  mirrorswidget.cpp  mirrorswidget.h  update.json  updatectrlwidget.cpp  updatectrlwidget.h  updatesettings.cpp  updatesettings.h  updatewidget.cpp  updatewidget.h  utils.h
src/dcc-update-plugin/window/widgets/: detailinfoitem.cpp  detailinfoitem.h  indicatorcheckbox.cpp  indicatorcheckbox.h  linebutton.cpp  linebutton.h  maincontrolpanel.cpp  maincontrolpanel.h  mirroritem.cpp  mirroritem.h  mirrorsourceitem.cpp  mirrorsourceitem.h  recenthistoryapplist.cpp  recenthistoryapplist.h  safeupdateitem.cpp  safeupdateitem.h  singlecontentwidget.h  summaryitem.cpp  summaryitem.h  systemupdateitem.cpp  (+19 more)
src/dde-abrecovery/: CMakeLists.txt  backgroundwidget.cpp  backgroundwidget.h  images.qrc  main.cpp  recoverydialog.cpp  recoverydialog.h
src/dde-abrecovery/misc/: 98_ab_rollback_conf.json  98_rollback_conf.json  ab_rollback_check.sh  rollback_check.sh
src/dde-abrecovery/translations/: dde-rollback_ar.ts  dde-rollback_az.ts  dde-rollback_bg.ts  dde-rollback_bo.ts  dde-rollback_ca.ts  dde-rollback_cs.ts  dde-rollback_da.ts  dde-rollback_de.ts  dde-rollback_de_DE.ts  dde-rollback_el.ts  dde-rollback_en_AU.ts  dde-rollback_en_GB.ts  dde-rollback_en_US.ts  dde-rollback_es.ts  dde-rollback_fa.ts  dde-rollback_fi.ts  dde-rollback_fr.ts  dde-rollback_gl_ES.ts  dde-rollback_he.ts  dde-rollback_hu.ts  dde-rollback_id.ts  dde-rollback_it.ts  dde-rollback_ja.ts  dde-rollback_ka.ts  dde-rollback_kab.ts  dde-rollback_ko.ts  dde-rollback_lt.ts  dde-rollback_ms.ts  dde-rollback_nl.ts  dde-rollback_pl.ts  dde-rollback_pt.ts  dde-rollback_pt_BR.ts  dde-rollback_ro.ts  dde-rollback_ru.ts  dde-rollback_si.ts  dde-rollback_sk.ts  dde-rollback_sl.ts  dde-rollback_sq.ts  dde-rollback_sr.ts  dde-rollback_th.ts  (+7 more)
src/dde-update/: CMakeLists.txt  abstractfullbackgroundinterface.h  blurtransparentbutton.cpp  blurtransparentbutton.h  checksystemwidget.cpp  checksystemwidget.h  fullscreen.cpp  fullscreen.h  fullscreenbackground.cpp  fullscreenbackground.h  fullscreenmanager.cpp  fullscreenmanager.h  main.cpp  updateimages.qrc  updatemodel.cpp  updatemodel.h  updatewidget.cpp  updatewidget.h  updateworker.cpp  updateworker.h
src/dde-update/misc/: 52-deepin-update-ui.rules  98deepin-upgrade-check  99_system_upgrade_conf.json  copy-update-log.sh  dde-update-autostart.desktop  dde-update-env.service  dde-update-env.sh  deepin-update-log-copy@.service  run-kwayland-check-wrapper.sh  run-kwayland-check.sh  system_upgrade_check.sh
src/dde-update/translations/: dde-update_ar.ts  dde-update_az.ts  dde-update_bo.ts  dde-update_ca.ts  dde-update_cs.ts  dde-update_de.ts  dde-update_de_DE.ts  dde-update_en_US.ts  dde-update_es.ts  dde-update_fi.ts  dde-update_fr.ts  dde-update_gl_ES.ts  dde-update_he.ts  dde-update_hr.ts  dde-update_hu.ts  dde-update_it.ts  dde-update_ja.ts  dde-update_kab.ts  dde-update_kk.ts  dde-update_lo.ts  dde-update_lt.ts  dde-update_mn.ts  dde-update_nl.ts  dde-update_pl.ts  dde-update_pt_BR.ts  dde-update_ru.ts  dde-update_sl.ts  dde-update_sq.ts  dde-update_th.ts  dde-update_tr.ts  dde-update_ug.ts  dde-update_uk.ts  dde-update_vi.ts  dde-update_zh_CN.ts  dde-update_zh_HK.ts  dde-update_zh_TW.ts
src/dock-update-plugin/: CMakeLists.txt  pluginupdateplugin.cpp  pluginupdateplugin.h
src/dock-update-plugin/resources/: dcc-plugin-update.dci  plugin-update.qrc  status-installed-restart-pending.dci  status-updates-available.dci
src/dock-update-plugin/translations/: dock-update-plugin_th.ts  dock-update-plugin_zh_CN.ts  dock-update-plugin_zh_HK.ts  dock-update-plugin_zh_TW.ts
src/dock-update-plugin/widget/: dockiconwidget.cpp  dockiconwidget.h  tipswidget.cpp  tipswidget.h
(+359 files in other folders)
